# DG2000-Trigger

./: .gitignore  BUILD.md  DG2000_ProgrammingGuide_CN.md  README.md  dg2000_dual_output_usb.m  dg2000_dual_output_usb.py  dg2000_gui.py  dg2000_trigger.spec  pyproject.toml  requirements.txt
.github/workflows/: pyinstaller.yml
dg2000_trigger/: __init__.py  __main__.py  app.py  models.py  scpi.py  worker.py
dg2000_trigger/ui/: __init__.py  main_window.py
scripts/: build_pyinstaller.ps1  build_pyinstaller.sh
